{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 1127,
  "lineage": "2f56f397-8148-d120-eedc-e49761941e86",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6bdd6b823ad4d6e",
            "arn": "arn:aws:ec2:ap-south-1:654654538309:elastic-ip/eipalloc-0c6bdd6b823ad4d6e",
            "domain": "vpc",
            "id": "eipalloc-0c6bdd6b823ad4d6e",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-35-154-169-118.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.169.118",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c2daa7650888843b",
            "arn": "arn:aws:ec2:ap-south-1:654654538309:elastic-ip/eipalloc-0c2daa7650888843b",
            "domain": "vpc",
            "id": "eipalloc-0c2daa7650888843b",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-201-200-168.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.200.168",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jobify-bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec0e125bb6c6e8ec",
            "arn": "arn:aws:ec2:ap-south-1:654654538309:instance/i-002bffa5b516df6c3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_ssm_profile",
            "id": "i-002bffa5b516df6c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09c18e1c1a436af03",
            "private_dns": "ip-10-0-1-55.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.55",
            "public_ip": "65.0.205.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-071cf770030c6b1a4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05eb6a3fac08b9300",
            "tags": {
              "Name": "jobify-bastion-host"
            },
            "tags_all": {
              "Name": "jobify-bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eaf5b951aa4d0ca1"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_security_group.jobify-bastion-sg",
            "aws_subnet.jobify-public-subnet-a",
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jobify-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654538309:internet-gateway/igw-035e39624e202e0de",
            "id": "igw-035e39624e202e0de",
            "owner_id": "654654538309",
            "tags": {
              "Name": "jobify-gw"
            },
            "tags_all": {
              "Name": "jobify-gw"
            },
            "vpc_id": "vpc-02f09da55bb30f254"
          },
          "dependencies": [
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jobify-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:654654538309:loadbalancer/app/jobify-alb/c13b81f01d98e28c",
            "arn_suffix": "app/jobify-alb/c13b81f01d98e28c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "jobify-alb-1505224721.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:654654538309:loadbalancer/app/jobify-alb/c13b81f01d98e28c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jobify-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a8595bf92346be19"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05eb6a3fac08b9300"
              },
              {
                "subnet_id": "subnet-0e28135faeb84ceb5"
              }
            ],
            "subnets": [
              "subnet-05eb6a3fac08b9300",
              "subnet-0e28135faeb84ceb5"
            ],
            "tags": {
              "Name": "jobify-alb"
            },
            "tags_all": {
              "Name": "jobify-alb"
            },
            "vpc_id": "vpc-02f09da55bb30f254",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.jobify-app-sg",
            "aws_subnet.jobify-public-subnet-a",
            "aws_subnet.jobify-public-subnet-b",
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jobify-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:654654538309:listener/app/jobify-alb/c13b81f01d98e28c/8ba894105a21ccea",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:654654538309:targetgroup/main-targets/688b172bd4b5a990",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:654654538309:listener/app/jobify-alb/c13b81f01d98e28c/8ba894105a21ccea",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:654654538309:loadbalancer/app/jobify-alb/c13b81f01d98e28c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.jobify-alb",
            "aws_lb_target_group.jobify-target-group",
            "aws_security_group.jobify-app-sg",
            "aws_subnet.jobify-public-subnet-a",
            "aws_subnet.jobify-public-subnet-b",
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jobify-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:654654538309:targetgroup/main-targets/688b172bd4b5a990",
            "arn_suffix": "targetgroup/main-targets/688b172bd4b5a990",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:654654538309:targetgroup/main-targets/688b172bd4b5a990",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "main-targets",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "jobify-target-group"
            },
            "tags_all": {
              "Name": "jobify-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02f09da55bb30f254"
          },
          "dependencies": [
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6bdd6b823ad4d6e",
            "association_id": "eipassoc-0aa6dcc2604def706",
            "connectivity_type": "public",
            "id": "nat-0cd542aa3950f1fa6",
            "network_interface_id": "eni-08b77fc6a8ca61a10",
            "private_ip": "10.0.1.32",
            "public_ip": "35.154.169.118",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05eb6a3fac08b9300",
            "tags": {
              "Name": "jobify-nat-a"
            },
            "tags_all": {
              "Name": "jobify-nat-a"
            }
          },
          "dependencies": [
            "aws_eip.nat-a",
            "aws_subnet.jobify-public-subnet-a",
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c2daa7650888843b",
            "association_id": "eipassoc-078e86cbe062ab756",
            "connectivity_type": "public",
            "id": "nat-05e472286e847db6f",
            "network_interface_id": "eni-04653c846c93378ff",
            "private_ip": "10.0.2.173",
            "public_ip": "13.201.200.168",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e28135faeb84ceb5",
            "tags": {
              "Name": "jobify-nat-b"
            },
            "tags_all": {
              "Name": "jobify-nat-b"
            }
          },
          "dependencies": [
            "aws_eip.nat-b",
            "aws_subnet.jobify-public-subnet-b",
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jobify-private-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654538309:route-table/rtb-09a36331045824d46",
            "id": "rtb-09a36331045824d46",
            "owner_id": "654654538309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cd542aa3950f1fa6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jobify-private-rt-a"
            },
            "tags_all": {
              "Name": "jobify-private-rt-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f09da55bb30f254"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-a",
            "aws_nat_gateway.nat-a",
            "aws_subnet.jobify-public-subnet-a",
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jobify-private-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654538309:route-table/rtb-03b9cc78587893024",
            "id": "rtb-03b9cc78587893024",
            "owner_id": "654654538309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05e472286e847db6f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jobify-private-rt-b"
            },
            "tags_all": {
              "Name": "jobify-private-rt-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f09da55bb30f254"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-b",
            "aws_nat_gateway.nat-b",
            "aws_subnet.jobify-public-subnet-b",
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jobify-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654538309:route-table/rtb-01a1115f21ba3111f",
            "id": "rtb-01a1115f21ba3111f",
            "owner_id": "654654538309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035e39624e202e0de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jobify-rt"
            },
            "tags_all": {
              "Name": "jobify-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f09da55bb30f254"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jobify-gw",
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4121c4e3469414b",
            "route_table_id": "rtb-01a1115f21ba3111f",
            "subnet_id": "subnet-05eb6a3fac08b9300"
          },
          "dependencies": [
            "aws_internet_gateway.jobify-gw",
            "aws_route_table.jobify-rt",
            "aws_subnet.jobify-public-subnet-a",
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2c0679a7a884add",
            "route_table_id": "rtb-01a1115f21ba3111f",
            "subnet_id": "subnet-0e28135faeb84ceb5"
          },
          "dependencies": [
            "aws_internet_gateway.jobify-gw",
            "aws_route_table.jobify-rt",
            "aws_subnet.jobify-public-subnet-b",
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e37cbb9be6cb2d7",
            "route_table_id": "rtb-09a36331045824d46",
            "subnet_id": "subnet-038816757299f752f"
          },
          "dependencies": [
            "aws_eip.nat-a",
            "aws_nat_gateway.nat-a",
            "aws_route_table.jobify-private-rt-a",
            "aws_subnet.jobify-private-subnet-a",
            "aws_subnet.jobify-public-subnet-a",
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c6b7df3f63043d1",
            "route_table_id": "rtb-03b9cc78587893024",
            "subnet_id": "subnet-01f66a0d6d841248e"
          },
          "dependencies": [
            "aws_eip.nat-b",
            "aws_nat_gateway.nat-b",
            "aws_route_table.jobify-private-rt-b",
            "aws_subnet.jobify-private-subnet-b",
            "aws_subnet.jobify-public-subnet-b",
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jobify-app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654538309:security-group/sg-0a8595bf92346be19",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8595bf92346be19",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240718114820334500000001",
            "name_prefix": "terraform-",
            "owner_id": "654654538309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jobify-app-sg"
            },
            "tags_all": {
              "Name": "jobify-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f09da55bb30f254"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jobify-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jobify-bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654538309:security-group/sg-0eaf5b951aa4d0ca1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eaf5b951aa4d0ca1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240718114821183500000002",
            "name_prefix": "terraform-",
            "owner_id": "654654538309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jobify-bastion-sg"
            },
            "tags_all": {
              "Name": "jobify-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f09da55bb30f254"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jobify-private-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654538309:subnet/subnet-038816757299f752f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038816757299f752f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654538309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jobify-private-subnet-a"
            },
            "tags_all": {
              "Name": "jobify-private-subnet-a"
            },
            "vpc_id": "vpc-02f09da55bb30f254"
          },
          "dependencies": [
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jobify-private-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654538309:subnet/subnet-01f66a0d6d841248e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f66a0d6d841248e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654538309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jobify-private-subnet-b"
            },
            "tags_all": {
              "Name": "jobify-private-subnet-b"
            },
            "vpc_id": "vpc-02f09da55bb30f254"
          },
          "dependencies": [
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jobify-public-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654538309:subnet/subnet-05eb6a3fac08b9300",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05eb6a3fac08b9300",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654538309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jobify-public-subnet-a"
            },
            "tags_all": {
              "Name": "jobify-public-subnet-a"
            },
            "vpc_id": "vpc-02f09da55bb30f254"
          },
          "dependencies": [
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jobify-public-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654538309:subnet/subnet-0e28135faeb84ceb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e28135faeb84ceb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654538309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jobify-public-subnet-b"
            },
            "tags_all": {
              "Name": "jobify-public-subnet-b"
            },
            "vpc_id": "vpc-02f09da55bb30f254"
          },
          "dependencies": [
            "aws_vpc.jobify-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jobify-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654538309:vpc/vpc-02f09da55bb30f254",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06916acf5398c7e3d",
            "default_route_table_id": "rtb-077ff62f6dea61439",
            "default_security_group_id": "sg-0ba92a6659f26ed3f",
            "dhcp_options_id": "dopt-0815e3f5c0b4a3ee8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02f09da55bb30f254",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-077ff62f6dea61439",
            "owner_id": "654654538309",
            "tags": {
              "Name": "jobify-vpc"
            },
            "tags_all": {
              "Name": "jobify-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}